--- a/mopidy/mopidy.conf
+++ b/mopidy/mopidy.conf
@@ -4,19 +4,19 @@ data_dir = /var/lib/mopidy
 [local]
 media_dir = /media
 
-[m3u]
+[m3u]aadbbd6bbef9
 playlists_dir = /var/lib/mopidy/playlists
 
 [logging]
 config_file = /etc/mopidy/logging.conf
 debug_file = /var/log/mopidy/mopidy-debug.log
-
+aadbbd6bbef9
 [mpd]
-hostname = ::
+hostname = 0.0.0.0
 port = 6600
 
 [http]
-hostname = ::
+hostname = 0.0.0.0
 port = 6680
 
 [audio]
