Update and rename filebrowser.json to settings.json for File Browser v2.33.0
- Changed "database" path from /db/database.db to /database/filebrowser.db
- Renamed filebrowser.json to settings.json as required by the new version
- Ensures compatibility with Docker volume structure introduced in v2.33.0

--- a/filebrowser/settings.json
+++ b/filebrowser/settings.json
@@ -6,7 +6,7 @@
   "alternativeReCaptcha": false,
   "reCaptchaKey": "",
   "reCaptchaSecret": "",
-  "database": "/db/database.db",
+  "database": "/database/filebrowser.db",
   "log": "stdout",
   "plugin": "",
   "scope": "/srv",
